--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -157,7 +157,7 @@ img { border-radius: 3px; }
     /*position: relative; */
     margin: 24px 0 36px 0;
 }
-#sidebar .widget .text-search {
+#sidebar .widget #s {
     padding-right: 40px;
     border:none;
     width: 100%;
@@ -165,7 +165,7 @@ img { border-radius: 3px; }
 
     border-radius: 3px;
 }
-#sidebar .widget .submit-search {
+#sidebar .widget #searchsubmit{
     background:url(../images/search-icon.png) no-repeat;
     border:none;
     cursor:pointer;
@@ -173,12 +173,15 @@ img { border-radius: 3px; }
     height:18px;
     margin: 0;
     padding: 0;
-
+    font-size: 0;
     float: right;
     position: relative;
     top: -60px;
     right: 18px;
     /*display: none !important;*/
+}
+.screen-reader-text{
+    display: none;
 }
 
 #primary { }
